@@ -92,7 +92,7 @@
 ; Register the function with the GIMP:
 
 (script-fu-register "script-fu-distress-selection"
-  _"_Disort..."
+  _"_Distort..."
   _"Distress the selection"
   "Chris Gutteridge"
   "1998, Chris Gutteridge / ECS dept, University of Southampton, England."
@@ -100,10 +100,10 @@
   "RGB*"
   SF-IMAGE       "The image"              0
   SF-DRAWABLE    "The layer"              0
-  SF-ADJUSTMENT _"Threshold (bigger 1<-->255 smaller)" '(127 1 255 1 10 0 0)
+  SF-ADJUSTMENT _"Threshold"              '(127 1 255 1 10 0 0)
   SF-ADJUSTMENT _"Spread"                 '(8 0 1000 1 10 0 1)
   SF-ADJUSTMENT _"Granularity (1 is low)" '(4 1 25 1 10 0 1)
-  SF-ADJUSTMENT _"Smooth"                 '(2 0 150 1 10 0 1)
+  SF-ADJUSTMENT _"Smooth"                 '(2 1 150 1 10 0 1)
   SF-TOGGLE     _"Smooth horizontally"    TRUE
   SF-TOGGLE     _"Smooth vertically"      TRUE
 )
