@@ -1,5 +1,11 @@
 2006-10-19  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/script-fu/scripts/distress-selection.scm: changed range
+	for Smoothness value as suggested in bug #363381. Also fixed a typo
+	in the menu label.
+
+2006-10-19  Sven Neumann  <sven@gimp.org>
+
 	* app/display/gimpdisplayshell-draw.c (gimp_display_shell_draw_area):
 	fixed calculation of display area in preparation of fixing bug #362915.
 
